Updates table-like objects when cells are added or removed.

When a table, grid or tree grid is dynamically updated through JavaScript and some cells are added or removed, we would fire a children changed event on the affected table rows, but we were not re-calculating the attributes stored in the table-like object itself, such as the list of cell IDs. This caused some hard to debug errors.
R=dmazzoni@chromium.org
BUG=736542

Review-Url: https://codereview.chromium.org/2953363002
Cr-Commit-Position: refs/heads/master@{#482792}

Former-commit-id: 24930aec1c8e42945e1a008e0924fa95750ce84a